Test des articles

--- a/www/templates/projects.html
+++ b/www/templates/projects.html
@@ -1,5 +1,5 @@
 {% extends "site.html" %}
-{% block title %}Ozeliurs' Website - Articles{% endblock %}
+{% block title %}Ozeliurs' Website - Projects{% endblock %}
 {% block content %}
     <a href="/article/XXXX" class="text-dark"><div class="card" style="margin: 10px auto">
         <h1 style="margin-bottom: 0px">Article Example</h1>
