--- a/www/templates/site.html
+++ b/www/templates/site.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title><!-- TITLE --></title>
+    <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="https://unpkg.com/chota@latest">
     <!-- https://feathericons.com/ && https://jenil.github.io/chota/ -->
 </head>
 <body style="background-color: rgba(26, 159, 96, 00.2)">
 <nav class="nav" style="background-color: white">
     <div class="nav-left">
-        <a href="https://www.ozeliurs.com" class="brand">Ozeliurs' Website</a>
+        <a href="/" class="brand">Ozeliurs' Website</a>
         <div class="tabs">
-            <a href="https://www.ozeliurs.com/projects.html">Projects</a>
-            <a href="https://www.ozeliurs.com/articles.html">Articles</a>
+            <a href="/projects">Projects</a>
+            <a href="/articles">Articles</a>
         </div>
     </div>
     <div class="nav-right">
@@ -20,7 +20,7 @@
     </div>
 </nav>
 <div class="container">
-    <!-- CONTENT -->
+    {% block content %}{% endblock %}
 </div>
 </body>
 </html>
