--- a/templates/404.html
+++ b/templates/404.html
@@ -1,5 +1,7 @@
 {% extends "site.html" %}
 {% block title %}404{% endblock %}
 {% block content %}
-<h1 class="is-vertical-align is-horizontal-align" style="font-size: 80px">404</h1>
+<div style="width: 100%; height: 100%">
+  <h1 class="is-vertical-align is-horizontal-align" style="font-size: 80px">404</h1>
+</div>
 {% endblock %}
