--- a/templates/404.html
+++ b/templates/404.html
@@ -1,7 +1,7 @@
 {% extends "site.html" %}
 {% block title %}404{% endblock %}
 {% block content %}
-<div style="width: 100%; height: 100%">
+<div style="height: 50vh">
   <h1 class="is-vertical-align is-horizontal-align" style="font-size: 80px">404</h1>
 </div>
 {% endblock %}
