--- a/templates/404.html
+++ b/templates/404.html
@@ -1,7 +1,5 @@
 {% extends "site.html" %}
 {% block title %}404{% endblock %}
 {% block content %}
-<div style="height: 50vh">
-  <h1 class="is-vertical-align is-horizontal-align" style="font-size: 80px">404</h1>
-</div>
+  <h1 class="is-vertical-align is-horizontal-align" style="font-size: 80px; height: 50vh">404</h1>
 {% endblock %}
