--- a/templates/404.html
+++ b/templates/404.html
@@ -1,5 +1,5 @@
 {% extends "site.html" %}
 {% block title %}404{% endblock %}
 {% block content %}
-  <h1 class="is-vertical-align is-horizontal-align" style="font-size: 80px; height: 100%; margin: 0px">404</h1>
+  <h1 class="is-vertical-align is-horizontal-align" style="font-size: 80px; height: 100vh; margin: 0px">404</h1>
 {% endblock %}
