--- a/templates/404.html
+++ b/templates/404.html
@@ -1,5 +1,7 @@
 {% extends "site.html" %}
 {% block title %}404{% endblock %}
 {% block content %}
-  <h1 class="is-vertical-align is-horizontal-align text-center" style="font-size: 80px; margin: 0px; height: calc(100vh - 5rem)">{{ message }}</h1>
+<div style="height: calc(100vh - 5rem)">
+  <h1 class="is-vertical-align is-horizontal-align text-center" style="font-size: 80px; margin: 0px">{{ message }}</h1>
+</div>
 {% endblock %}
