--- a/templates/404.html
+++ b/templates/404.html
@@ -1,7 +1,7 @@
 {% extends "site.html" %}
 {% block title %}404{% endblock %}
 {% block content %}
-<div style="height: calc(100vh - 5rem); display: flex; align-items: center; flex-direction: column">
+<div style="height: calc(100vh - 5rem); display: flex; align-items: center; flex-direction: column; justify-content: center">
   <h1 class="is-vertical-align is-horizontal-align text-center" style="font-size: 80px; margin: 0px">{{ message }}</h1>
   <h3 class="is-vertical-align is-horizontal-align text-center text-grey" style="font-size: 30px; margin: 0px; margin-top: 10px">404 Not Found</h1>
 </div>
