--- a/templates/print.html
+++ b/templates/print.html
@@ -9,7 +9,7 @@
 <body>
     <div class="row">
         <div class="col"> <!-- Colonne de Gauche -->
-            <img src="content/pp.webp" alt="Profile-Picture" class="is-rounded" style="padding: 10px">
+            <img src="{{ url_for('static', filename='content/pp.webp') }}" alt="Profile-Picture" class="is-rounded" style="padding: 10px">
             <code style="margin-left: 5px" class="is-center">Maxime BILLY</code>
             <hr>
             <div style="margin-left: 5px">
