--- a/templates/index_fr.html
+++ b/templates/index_fr.html
@@ -16,7 +16,7 @@
                 <p style="margin-bottom: 0">Permis de Conduire (B)</p>
                 <small>Obtenu en 2020.</small>
                 <br><br>
-                <p> Fier Propriétaire d'une <i>Ford Fiesta</i>.</p>
+                <p> Propriétaire d'une <i>Ford Fiesta</i>.</p>
             </div>
             <div class="card" style="margin: 10px auto">
                 <p style="margin-left: 5px; margin-bottom: 0">Brevet d'Initiation a l'Aéronautique</p>
@@ -30,7 +30,7 @@
                 <code>Janvier 2015 à Janvier 2015</code>
                 <ul><li>Création d'un algorithme pour l'automatisation électrique d'un bâtiment.</li></ul>
                 <h4 style="margin-bottom: 0"><b>Lycée Alexis de Tocqueville</b>, Grasse</h4>
-                <code>Septembre 2015 to Juin 2018</code>
+                <code>Septembre 2015 à Juin 2018</code>
                 <h4 style="margin-bottom: 0"><b>Ecole Nationale d'Ingénieurs de Saint Etienne</b>, Saint Etienne</h4>
                 <code>Septembre 2018 à Fevrier 2020</code>
                 <h4 style="margin-bottom: 0"><b>LEASON</b>, Saint Cézaire — Carrefour Contact</h4>
