--- a/templates/index_fr.html
+++ b/templates/index_fr.html
@@ -8,7 +8,7 @@
             <code style="margin-left: 5px" class="is-center">Maxime BILLY</code>
             <hr>
             <div style="margin-left: 5px">
-                <samp>Né le XX/03/2000 (21 yo)</samp><br>
+                <samp>Né le XX/03/2000 (21 ans)</samp><br>
                 <samp>Vit à Saint Cézaire 06530</samp>
             </div>
             <hr>
